action method for puzzle state class is done

--- a/8-puzzle.ipynb
+++ b/8-puzzle.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +43,40 @@
     "        if index_blank % 3 != 0:\n",
     "            moves.append(\"LEFT\")\n",
     "        \n",
-    "        return moves\n"
+    "        return moves\n",
+    "\n",
+    "    # Return a new state after an action is taken\n",
+    "    def actions(self, move):\n",
+    "        newState = self.state.copy()\n",
+    "        index_blank = self.state.index(-1)\n",
+    "\n",
+    "        # Swapping with blank tiles thats all, nothing new\n",
+    "        if move == \"UP\":\n",
+    "            newState[index_blank], newState[index_blank - 3] = newState[index_blank - 3], newState[index_blank]\n",
+    "        if move == \"DOWN\":\n",
+    "            newState[index_blank], newState[index_blank + 3] = newState[index_blank + 3], newState[index_blank]\n",
+    "        if move == \"RIGHT\":\n",
+    "            newState[index_blank], newState[index_blank + 1] = newState[index_blank + 1], newState[index_blank]\n",
+    "        if move == \"LEFT\":\n",
+    "            newState[index_blank], newState[index_blank - 1] = newState[index_blank - 1], newState[index_blank]\n",
+    "\n",
+    "        return PuzzleState(newState, self.goalSate)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 1\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
