Done the function for IDS and DFS

--- a/8-puzzle.ipynb
+++ b/8-puzzle.ipynb
@@ -9,17 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "class PuzzleState:\n",
     "    def __init__(self, state, goalState):\n",
     "        self.state = state\n",
-    "        self.goalSate = goalState\n",
+    "        self.goalState = goalState\n",
     "\n",
     "    # Checking if the state reaches goal state\n",
-    "    def is_goal(self):\n",
+    "    def is_goalState(self):\n",
     "        return self.state == self.goalState\n",
     "    \n",
     "    # Returns all the possible moves for the blank space --> example: moves = [\"UP\", \"RIGHT\", ...]\n",
@@ -60,29 +60,71 @@
     "        if move == \"LEFT\":\n",
     "            newState[index_blank], newState[index_blank - 1] = newState[index_blank - 1], newState[index_blank]\n",
     "\n",
-    "        return PuzzleState(newState, self.goalSate)"
+    "        return PuzzleState(newState, self.goalState)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Applying IDS search and also DFS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dfs(puzzleState, depth):\n",
+    "    if puzzleState.is_goalState(): # Check if the puzzle reached the goal state\n",
+    "        return []\n",
+    "    \n",
+    "    if depth == 0:\n",
+    "        return None\n",
+    "    \n",
+    "    for move in puzzleState.possible_moves():\n",
+    "        newState = puzzleState.actions(move) \n",
+    "        soln = dfs(newState, depth-1)\n",
+    "        if soln is not None:\n",
+    "            return [move] + soln\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def idsSearch(puzzleState, maxDepth): # IDS search is implemented with maximum depth defined\n",
+    "    for depth in range(1, maxDepth + 1):\n",
+    "        soln = dfs(puzzleState, depth)\n",
+    "        if soln is not None:\n",
+    "            return soln\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 1\n"
+      "Solution is :  ['RIGHT', 'UP', 'RIGHT']\n"
      ]
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
