main function is done.

--- a/8-puzzle.ipynb
+++ b/8-puzzle.ipynb
@@ -107,24 +107,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def main():\n",
+    "    initialState = [1, 4, 2, -1, 5, 3, 6, 7, 8]\n",
+    "    goalState = [1, 2, -1, 5, 4, 3, 6, 7, 8]\n",
+    "    maxDepth = 5\n",
+    "\n",
+    "    soln = idsSearch(PuzzleState(initialState, goalState), maxDepth)\n",
+    "\n",
+    "    if soln is not None:\n",
+    "        print(\"Solution is: \", soln)\n",
+    "    else:\n",
+    "        print(f\"No solution found within the max depth of {maxDepth}\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solution is :  ['RIGHT', 'UP', 'RIGHT']\n"
+      "Solution is:  ['RIGHT', 'UP', 'RIGHT']\n"
      ]
     }
    ],
+   "source": [
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
