Solution is now printed out like desired

--- a/8-puzzle.ipynb
+++ b/8-puzzle.ipynb
@@ -106,47 +106,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def main():\n",
-    "    initialState = [1, 4, 2, -1, 5, 3, 6, 7, 8]\n",
-    "    goalState = [1, 2, -1, 5, 4, 3, 6, 7, 8]\n",
-    "    maxDepth = 5\n",
-    "\n",
-    "    soln = idsSearch(PuzzleState(initialState, goalState), maxDepth)\n",
-    "\n",
-    "    if soln is not None:\n",
-    "        print(\"Solution is: \", soln)\n",
-    "    else:\n",
-    "        print(f\"No solution found within the max depth of {maxDepth}\")"
+    "## Main function is defined "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solution is:  ['RIGHT', 'UP', 'RIGHT']\n"
+      "Path Found: RIGHT-> UP-> RIGHT"
      ]
     }
    ],
    "source": [
+    "def main():\n",
+    "    initialState = [1, 4, 2, -1, 5, 3, 6, 7, 8]\n",
+    "    goalState = [1, 2, -1, 5, 4, 3, 6, 7, 8]\n",
+    "    maxDepth = 3\n",
+    "\n",
+    "    soln = idsSearch(PuzzleState(initialState, goalState), maxDepth)\n",
+    "\n",
+    "    if soln is not None:\n",
+    "        print(\"Path Found: \", end=\"\")\n",
+    "        for i, sol in enumerate(soln):\n",
+    "            print(f\"{sol}\", end=\"\")\n",
+    "            if i < len(soln) - 1:\n",
+    "                print(\"->\", end=\" \")\n",
+    " \n",
+    "    else:\n",
+    "        print(f\"No path found within the max depth of {maxDepth}\")\n",
+    "\n",
     "main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
